Fixed Background Image Scroll on Mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -1253,10 +1253,12 @@ footer h4, footer p.caption {
 .parallax_background {
 	width: 100%;
 	height: 100vh;
-	background-attachment: fixed;
+	background-attachment: scroll;
 	background-size: cover;
 	background-position: center center;
+	background-repeat: no-repeat;
 }
+
 
 #chase_masters_project .parallax_background {
 	margin-top: 40px;
@@ -1364,6 +1366,13 @@ footer h4, footer p.caption {
 	.more-work-tile:nth-child(even) {
 		margin-right: 3%;
 		margin-left: 3%;
+	}
+	.parallax_background {
+		width: 100%;
+		height: 100vh;
+		background-attachment: fixed;
+		background-size: cover;
+		background-position: center center;
 	}
 
 }
